[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.77542, 190.422 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 305.237, 5.38662 )

[node name="PlayerController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 320, 100 )
offset = Vector2( 320, 100 )
current = true
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_speed = 20.0

[node name="Scrollers" type="Node2D" parent="camera"]
position = Vector2( -320, -100 )

[node name="AreaLeft" type="Area2D" parent="camera/Scrollers"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/Scrollers/AreaLeft"]
position = Vector2( 344.658, 201.179 )
shape = SubResource( 1 )

[node name="AreaRight" type="Area2D" parent="camera/Scrollers"]
editor/display_folded = true
position = Vector2( 591, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/Scrollers/AreaRight"]
position = Vector2( 344.658, 201.179 )
shape = SubResource( 1 )

[node name="AreaUp" type="Area2D" parent="camera/Scrollers"]
editor/display_folded = true
position = Vector2( 135.516, 1.29236 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/Scrollers/AreaUp"]
position = Vector2( 506.658, 15.1792 )
shape = SubResource( 2 )

[node name="AreaDown" type="Area2D" parent="camera/Scrollers"]
editor/display_folded = true
position = Vector2( 341, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/Scrollers/AreaDown"]
position = Vector2( 295.658, 382.179 )
shape = SubResource( 2 )

